Fixed mini map being stretched
Also, greatly improved the look of the navigation menu. Also also, made it obvious to the user when they enter an invalid value (shake box and show error modal). Also also also, got rid of annoying bug where the instanced meshes original copy showed up for a split second (moved it really far of the screen 😬).

--- a/style.css
+++ b/style.css
@@ -1,26 +1,37 @@
 #welcomeScreen {
     width: auto;
     height: auto;
-    border: 13px dashed forestgreen;
-    border-radius: 55px;
-    padding: 50px;
-    margin: 20px;
+    border: 13px dashed rgb(36, 155, 36);
+    background-color: rgba(23, 92, 16, 0.9);
+    border-radius: 45px;
+    padding: 40px;
+    max-width: fit-content;
+    /* margin: auto; */
+    margin-top: 4%;
+    margin-left: 4%;
+    margin-right: 4%;
     z-index: 100;
     position: relative;
 }
 
 #navigationScreen {
-    border: 13px dashed forestgreen;
-    border-radius: 55px;
+    border: 4px solid rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 38px;
     padding: 50px;
-    margin: 20px;
+    max-width: fit-content;
+    z-index: 100;
+    position: relative;
+    text-align: center;
+    display: flex;
+    margin: auto;
 }
 
 body {
     font-size: large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: white;
-    color: black;
+    background-color: rgb(73, 73, 73);
+    color: rgb(223, 223, 223);
     z-index: 100;
     position: relative;
 }
@@ -34,7 +45,7 @@ h2 {
 }
 
 button {
-    font-size: large;
+    font-size: 2.6vh;
     font-weight: 600;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-top: 15px;
@@ -47,18 +58,33 @@ button {
     z-index: 2;
     position: relative;
     border: 2px solid rgb(5, 32, 2);
-    border-radius: 16px;
+    border-radius: 12px;
     color: black;
+}
+
+/* Compile button has seperate styling needs */
+button:hover {
+    background-color: rgb(101, 173, 94)
 }
 
 #startNavigationBtn {
     background-color: #31bc24;
     color: white;
+    width: 120px;
+    height: 50px;
+    text-align: center;
+    line-height: 1.1em;
+    font-size: 1.1em;
 }
 
 #hideNavigationMenuBtn {
     background-color: #f27777;
     color: white;
+    width: 120px;
+    height: 50px;
+    text-align: center;
+    line-height: 1.1em;
+    font-size: 1.1em;
 }
 
 label {
@@ -84,6 +110,11 @@ input {
     padding-bottom: 10px;
     z-index: 100;
     position: relative;
+    width: 250px;
+    height: 50px;
+    text-align: center;
+    line-height: 1.1em;
+    font-size: 1.1em;
 }
 
 .a-enter-vr-button {
@@ -118,7 +149,7 @@ a-scene {
     bottom: 0;
     right: 0;
     left: 0;
-    height: 120px;
+    height: 90px;
     background-color: #006110;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     animation-name: modalSlideUp;
@@ -137,7 +168,7 @@ a-scene {
 
 @keyframes modalSlideUp {
     from {
-        bottom: -300px;
+        bottom: -100px;
         opacity: 0
     }
 
@@ -154,7 +185,7 @@ a-scene {
     }
 
     to {
-        bottom: -300px;
+        bottom: -100px;
         opacity: 0;
     }
 }
@@ -180,6 +211,7 @@ a-scene {
     right: 10px;
     padding: 8px;
     background-color: rgba(255, 255, 255, 0.5);
+    color: black;
     border-radius: 4px;
     font-size: 11px;
     text-align: right;
@@ -194,4 +226,27 @@ a-scene {
     max-height: 2.4em;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.error {
+    animation: shake 0.16s ease-in-out 0s 3;
+    box-shadow: 0 0 0.5em red;
+}
+
+@keyframes shake {
+    0% {
+        margin-left: 0rem;
+    }
+
+    25% {
+        margin-left: 0.5rem;
+    }
+
+    75% {
+        margin-left: -0.5rem;
+    }
+
+    100% {
+        margin-left: 0rem;
+    }
 }
